# tools

./: .gitignore
ghtools/: .env.sample  README.md  pyproject.toml
ghtools/src/ghtools/: main.py
perplexity/auto-research/: README.md  package-lock.json  package.json
perplexity/auto-research/app/: layout.tsx  page.tsx
perplexity/auto-research/pages/api/: getCompanyInfo.ts
