[project]
name = "ghtools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki Nakajima", email = "yuki.nakajima@revcomm.co.jp" }
]
dependencies = [
    "httpx>=0.27.0",
    "fire>=0.6.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ghtools"]
